# orchestrator

./: .env.test  .gitignore  README.md  alternative_sensor_example.py  debug_config.py  env.dev.example  env.example  env.prod.example  playbook.yml  pyproject.toml  setup.py  test_api_connectivity.py  test_config_simple.py
docs/: testing_strategy.md
docs/examples/: README.md  event_driven_example.py
orchestrator/: definitions.py
orchestrator/assets/: report_discovery.py  report_processing.py
orchestrator/jobs/: individual_report_jobs.py  report_pipeline.py
orchestrator/resources/: api_client.py  azure_storage.py  external_api.py  fabric_storage.py
orchestrator/schedules/: dynamic_schedules.py
orchestrator/sensors/: report_sensor.py
orchestrator/utils/: config.py  dynamic_job_manager.py  external_api.py  schema_transformer.py
schematics/: cron_change_handling.md  individual_jobs_architecture.md  scheduling_overview.md  schematic.md
tests/: __init__.py  test_api_client.py  test_api_client_integration.py  test_api_connectivity.py  test_config.py  test_cron_validation.py  test_dagster_components.py  test_event_group_validation.py  test_fabric_storage.py  test_fireant_integration.py  test_modifier_management_integration.py  test_orchestrator_integration.py  test_pipeline_methodology.py  test_schema_transformer.py
